--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -6771,7 +6771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
    "metadata": {},
    "outputs": [
@@ -6803,6 +6803,11 @@
        "      <th>CO2</th>\n",
        "      <th>HumidityRatio</th>\n",
        "      <th>Occupancy</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>bright</th>\n",
+       "      <th>steamy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -6815,6 +6820,11 @@
        "      <td>721.25</td>\n",
        "      <td>0.004793</td>\n",
        "      <td>1</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>51</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6825,6 +6835,11 @@
        "      <td>714.00</td>\n",
        "      <td>0.004783</td>\n",
        "      <td>1</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>51</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6835,6 +6850,11 @@
        "      <td>713.50</td>\n",
        "      <td>0.004779</td>\n",
        "      <td>1</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>53</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6845,6 +6865,11 @@
        "      <td>708.25</td>\n",
        "      <td>0.004772</td>\n",
        "      <td>1</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>54</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6855,132 +6880,9 @@
        "      <td>704.50</td>\n",
        "      <td>0.004757</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
-       "0  2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
-       "1  2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
-       "2  2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
-       "3  2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
-       "4  2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
-       "\n",
-       "   Occupancy  \n",
-       "0          1  \n",
-       "1          1  \n",
-       "2          1  \n",
-       "3          1  \n",
-       "4          1  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>minute</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Light</th>\n",
-       "      <th>CO2</th>\n",
-       "      <th>HumidityRatio</th>\n",
-       "      <th>Occupancy</th>\n",
-       "      <th>bright</th>\n",
-       "      <th>steamy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>17</td>\n",
-       "      <td>51</td>\n",
-       "      <td>23.18</td>\n",
-       "      <td>27.2720</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>721.25</td>\n",
-       "      <td>0.004793</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>17</td>\n",
-       "      <td>51</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2675</td>\n",
-       "      <td>429.5</td>\n",
-       "      <td>714.00</td>\n",
-       "      <td>0.004783</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>17</td>\n",
-       "      <td>53</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2450</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>713.50</td>\n",
-       "      <td>0.004779</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>17</td>\n",
-       "      <td>54</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2000</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>708.25</td>\n",
-       "      <td>0.004772</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>Wednesday</td>\n",
        "      <td>17</td>\n",
        "      <td>55</td>\n",
-       "      <td>23.10</td>\n",
-       "      <td>27.2000</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>704.50</td>\n",
-       "      <td>0.004757</td>\n",
-       "      <td>1</td>\n",
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
@@ -6989,19 +6891,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  day_of_week  hour  minute  Temperature  Humidity  Light     CO2  \\\n",
-       "0   Wednesday    17      51        23.18   27.2720  426.0  721.25   \n",
-       "1   Wednesday    17      51        23.15   27.2675  429.5  714.00   \n",
-       "2   Wednesday    17      53        23.15   27.2450  426.0  713.50   \n",
-       "3   Wednesday    17      54        23.15   27.2000  426.0  708.25   \n",
-       "4   Wednesday    17      55        23.10   27.2000  426.0  704.50   \n",
+       "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
+       "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
+       "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
+       "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
+       "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
+       "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
        "\n",
-       "   HumidityRatio  Occupancy  bright  steamy  \n",
-       "0       0.004793          1    True    True  \n",
-       "1       0.004783          1    True    True  \n",
-       "2       0.004779          1    True    True  \n",
-       "3       0.004772          1    True    True  \n",
-       "4       0.004757          1    True    True  "
+       "   Occupancy day_of_week  hour  minute  bright  steamy  \n",
+       "0          1   Wednesday    17      51    True    True  \n",
+       "1          1   Wednesday    17      51    True    True  \n",
+       "2          1   Wednesday    17      53    True    True  \n",
+       "3          1   Wednesday    17      54    True    True  \n",
+       "4          1   Wednesday    17      55    True    True  "
       ]
      },
      "metadata": {},
@@ -7026,11 +6928,11 @@
     "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
     "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
     "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
-    "occupancy = occupancy[[\"day_of_week\", \"hour\", \"minute\", \"Temperature\", \"Humidity\", \"Light\",  \"CO2\", \"HumidityRatio\", \"Occupancy\" ]]\n",
+    "# occupancy = occupancy[[\"day_of_week\", \"hour\", \"minute\", \"Temperature\", \"Humidity\", \"Light\",  \"CO2\", \"HumidityRatio\", \"Occupancy\" ]]\n",
     "occupancy[\"bright\"] = (occupancy[\"Light\"] >= occupancy[\"Light\"].mean())\n",
     "occupancy[\"steamy\"] = (occupancy['Humidity'] > occupancy['Humidity'].mean()) & (occupancy[\"Temperature\"] > occupancy[\"Temperature\"].mean())\n",
     "\n",
-    "# display(occupancy.head())"
+    "display(occupancy.head())"
    ]
   }
  ],
