--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -6918,17 +6918,16 @@
     "\n",
     "\n",
     "occupancy = pd.read_csv(\"https://raw.githubusercontent.com/dustywhite7/pythonMikkeli/master/exampleData/roomOccupancy.csv\")\n",
-    "# display((occupancy.head()))\n",
     "\n",
-    "# pd.concat([occupancy[\"Light\"], occupancy[\"Humidity\"]], axis=1)\n",
-    "# data['datetime'] = pd.to_datetime(data['datetime'])\n",
+    "\n",
+    "\n",
     "\n",
     "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
     "\n",
     "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
     "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
     "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
-    "# occupancy = occupancy[[\"day_of_week\", \"hour\", \"minute\", \"Temperature\", \"Humidity\", \"Light\",  \"CO2\", \"HumidityRatio\", \"Occupancy\" ]]\n",
+    "occupancy = occupancy[[\"day_of_week\", \"hour\", \"minute\", \"Temperature\", \"Humidity\", \"Light\",  \"CO2\", \"HumidityRatio\", \"Occupancy\" ]]\n",
     "occupancy[\"bright\"] = (occupancy[\"Light\"] >= occupancy[\"Light\"].mean())\n",
     "occupancy[\"steamy\"] = (occupancy['Humidity'] > occupancy['Humidity'].mean()) & (occupancy[\"Temperature\"] > occupancy[\"Temperature\"].mean())\n",
     "\n",
