--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -6771,7 +6771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
    "metadata": {},
    "outputs": [
@@ -6796,16 +6796,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
        "      <th>Temperature</th>\n",
        "      <th>Humidity</th>\n",
        "      <th>Light</th>\n",
        "      <th>CO2</th>\n",
        "      <th>HumidityRatio</th>\n",
        "      <th>Occupancy</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>minute</th>\n",
        "      <th>bright</th>\n",
        "      <th>steamy</th>\n",
        "    </tr>\n",
@@ -6813,97 +6812,191 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2015-02-04 17:51:00</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>17</td>\n",
+       "      <td>51</td>\n",
        "      <td>23.18</td>\n",
        "      <td>27.2720</td>\n",
        "      <td>426.0</td>\n",
-       "      <td>721.25</td>\n",
+       "      <td>721.250000</td>\n",
        "      <td>0.004793</td>\n",
        "      <td>1</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>17</td>\n",
-       "      <td>51</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2015-02-04 17:51:59</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2675</td>\n",
-       "      <td>429.5</td>\n",
-       "      <td>714.00</td>\n",
-       "      <td>0.004783</td>\n",
-       "      <td>1</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>17</td>\n",
        "      <td>51</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2675</td>\n",
+       "      <td>429.5</td>\n",
+       "      <td>714.000000</td>\n",
+       "      <td>0.004783</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2015-02-04 17:53:00</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2450</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>713.50</td>\n",
-       "      <td>0.004779</td>\n",
-       "      <td>1</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>17</td>\n",
        "      <td>53</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2450</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>713.500000</td>\n",
+       "      <td>0.004779</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2015-02-04 17:54:00</td>\n",
-       "      <td>23.15</td>\n",
-       "      <td>27.2000</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>708.25</td>\n",
-       "      <td>0.004772</td>\n",
-       "      <td>1</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>17</td>\n",
        "      <td>54</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>23.15</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>708.250000</td>\n",
+       "      <td>0.004772</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-02-04 17:55:00</td>\n",
-       "      <td>23.10</td>\n",
-       "      <td>27.2000</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>704.50</td>\n",
-       "      <td>0.004757</td>\n",
-       "      <td>1</td>\n",
        "      <td>Wednesday</td>\n",
        "      <td>17</td>\n",
        "      <td>55</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>23.10</td>\n",
+       "      <td>27.2000</td>\n",
+       "      <td>426.0</td>\n",
+       "      <td>704.500000</td>\n",
+       "      <td>0.004757</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8138</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21.05</td>\n",
+       "      <td>36.0975</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>787.250000</td>\n",
+       "      <td>0.005579</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8139</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21.05</td>\n",
+       "      <td>35.9950</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>789.500000</td>\n",
+       "      <td>0.005563</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8140</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.0950</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>798.500000</td>\n",
+       "      <td>0.005596</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8141</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>32</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.2600</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>820.333333</td>\n",
+       "      <td>0.005621</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8142</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>33</td>\n",
+       "      <td>21.10</td>\n",
+       "      <td>36.2000</td>\n",
+       "      <td>447.0</td>\n",
+       "      <td>821.000000</td>\n",
+       "      <td>0.005612</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>8143 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
-       "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
-       "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
-       "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
-       "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
-       "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
+       "     day_of_week  hour  minute  Temperature  Humidity  Light         CO2  \\\n",
+       "0      Wednesday    17      51        23.18   27.2720  426.0  721.250000   \n",
+       "1      Wednesday    17      51        23.15   27.2675  429.5  714.000000   \n",
+       "2      Wednesday    17      53        23.15   27.2450  426.0  713.500000   \n",
+       "3      Wednesday    17      54        23.15   27.2000  426.0  708.250000   \n",
+       "4      Wednesday    17      55        23.10   27.2000  426.0  704.500000   \n",
+       "...          ...   ...     ...          ...       ...    ...         ...   \n",
+       "8138     Tuesday     9      29        21.05   36.0975  433.0  787.250000   \n",
+       "8139     Tuesday     9      29        21.05   35.9950  433.0  789.500000   \n",
+       "8140     Tuesday     9      30        21.10   36.0950  433.0  798.500000   \n",
+       "8141     Tuesday     9      32        21.10   36.2600  433.0  820.333333   \n",
+       "8142     Tuesday     9      33        21.10   36.2000  447.0  821.000000   \n",
        "\n",
-       "   Occupancy day_of_week  hour  minute  bright  steamy  \n",
-       "0          1   Wednesday    17      51    True    True  \n",
-       "1          1   Wednesday    17      51    True    True  \n",
-       "2          1   Wednesday    17      53    True    True  \n",
-       "3          1   Wednesday    17      54    True    True  \n",
-       "4          1   Wednesday    17      55    True    True  "
+       "      HumidityRatio  Occupancy  bright  steamy  \n",
+       "0          0.004793          1       1       1  \n",
+       "1          0.004783          1       1       1  \n",
+       "2          0.004779          1       1       1  \n",
+       "3          0.004772          1       1       1  \n",
+       "4          0.004757          1       1       1  \n",
+       "...             ...        ...     ...     ...  \n",
+       "8138       0.005579          1       1       1  \n",
+       "8139       0.005563          1       1       1  \n",
+       "8140       0.005596          1       1       1  \n",
+       "8141       0.005621          1       1       1  \n",
+       "8142       0.005612          1       1       1  \n",
+       "\n",
+       "[8143 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -6928,8 +7021,8 @@
     "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
     "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
     "occupancy = occupancy[[\"day_of_week\", \"hour\", \"minute\", \"Temperature\", \"Humidity\", \"Light\",  \"CO2\", \"HumidityRatio\", \"Occupancy\" ]]\n",
-    "occupancy[\"bright\"] = (occupancy[\"Light\"] >= occupancy[\"Light\"].mean())\n",
-    "occupancy[\"steamy\"] = (occupancy['Humidity'] > occupancy['Humidity'].mean()) & (occupancy[\"Temperature\"] > occupancy[\"Temperature\"].mean())\n",
+    "occupancy[\"bright\"] = (occupancy[\"Light\"] > occupancy[\"Light\"].mean()).astype(int)\n",
+    "occupancy[\"steamy\"] = ((occupancy['Humidity'] > occupancy['Humidity'].mean()) & (occupancy[\"Temperature\"] > occupancy[\"Temperature\"].mean())).astype(int)\n",
     "\n"
    ]
   }
